@@ -9,8 +9,8 @@ export(is_commit)
 export(libgit2_features)
 export(libgit2_sha)
 export(libgit2_version)
-export(ls_remote)
 export(punch_card)
+export(remote_ls)
 exportClasses(cred_env)
 exportClasses(cred_ssh_key)
 exportClasses(cred_token)
@@ -81,7 +81,6 @@ exportMethods(is_merge)
 exportMethods(is_shallow)
 exportMethods(length)
 exportMethods(lookup)
-exportMethods(ls_remote)
 exportMethods(merge)
 exportMethods(merge_base)
 exportMethods(note_create)
@@ -98,6 +97,7 @@ exportMethods(push)
 exportMethods(references)
 exportMethods(reflog)
 exportMethods(remote_add)
+exportMethods(remote_ls)
 exportMethods(remote_remove)
 exportMethods(remote_rename)
 exportMethods(remote_set_url)
